migrator-tests/tests/snapshots/generate__twoway_migrations-4.snap
---
source: migrator-tests/tests/generate.rs
expression: contents
---
REMOVE TABLE animal;
REMOVE TABLE crop;
REMOVE TABLE eats;
REMOVE TABLE migration;
REMOVE TABLE planet;
REMOVE TABLE student;
DEFINE TABLE animal SCHEMAFULL;
DEFINE FIELD attributes ON animal TYPE array<string>;
DEFINE FIELD createdAt ON animal TYPE datetime;
DEFINE FIELD id ON animal TYPE record<animal>;
DEFINE FIELD species ON animal TYPE string;
DEFINE FIELD updatedAt ON animal TYPE datetime;
DEFINE FIELD velocity ON animal TYPE int;
DEFINE INDEX species_speed_idx ON animal FIELDS species, velocity UNIQUE;
DEFINE EVENT event1 ON animal WHEN species = 'Homo Erectus' AND velocity > 545 THEN (SELECT * FROM crop);
DEFINE EVENT event2 ON animal WHEN (species = 'Homo Sapien') AND (velocity < 10) THEN (SELECT * FROM eats);
DEFINE TABLE crop SCHEMAFULL;
DEFINE FIELD color ON crop TYPE string;
DEFINE FIELD id ON crop TYPE record<crop>;
DEFINE TABLE eats SCHEMAFULL;
DEFINE FIELD createdAt ON eats TYPE datetime;
DEFINE FIELD id ON eats TYPE record<eats>;
DEFINE FIELD in ON eats TYPE record;
DEFINE FIELD out ON eats TYPE record;
DEFINE FIELD place ON eats TYPE string;
DEFINE TABLE migration SCHEMAFULL;
DEFINE FIELD id ON migration TYPE record<migration>;
DEFINE FIELD name ON migration TYPE string;
DEFINE FIELD timestamp ON migration TYPE int;
DEFINE TABLE planet SCHEMAFULL;
DEFINE FIELD createdAt ON planet TYPE datetime;
DEFINE FIELD firstName ON planet TYPE string;
DEFINE FIELD id ON planet TYPE record<planet>;
DEFINE FIELD labels ON planet TYPE array<string>;
DEFINE FIELD population ON planet TYPE int;
DEFINE FIELD updatedAt ON planet TYPE datetime;
DEFINE TABLE student SCHEMAFULL;
DEFINE FIELD age ON student TYPE int;
DEFINE FIELD createdAt ON student TYPE datetime;
DEFINE FIELD id ON student TYPE record<student>;
DEFINE FIELD university ON student TYPE string;
DEFINE FIELD updatedAt ON student TYPE datetime;
DEFINE FIELD attributes ON animal TYPE array<string>;


DEFINE FIELD attributes ON animal TYPE array<string>;
UPDATE animal SET attributes = characteristics;
REMOVE FIELD characteristics ON TABLE animal;


DEFINE FIELD createdAt ON animal TYPE datetime;


DEFINE FIELD updatedAt ON animal TYPE datetime;


DEFINE INDEX species_speed_idx ON animal FIELDS species, velocity UNIQUE;
DEFINE EVENT event1 ON animal WHEN species = 'Homo Erectus' AND velocity > 545 THEN (SELECT * FROM crop);
DEFINE EVENT event2 ON animal WHEN (species = 'Homo Sapien') AND (velocity < 10) THEN (SELECT * FROM eats);
REMOVE FIELD location ON TABLE eats;


DEFINE FIELD place ON eats TYPE string;


REMOVE FIELD updatedAt ON TABLE eats;


REMOVE TABLE new_stuff;
DEFINE FIELD firstName ON planet TYPE string;
UPDATE planet SET firstName = newName;
REMOVE FIELD newName ON TABLE planet;


DEFINE TABLE student SCHEMAFULL;
DEFINE FIELD age ON student TYPE int;


DEFINE FIELD createdAt ON student TYPE datetime;


DEFINE FIELD id ON student TYPE record<student>;


DEFINE FIELD university ON student TYPE string;


DEFINE FIELD updatedAt ON student TYPE datetime;
REMOVE FIELD attributes ON TABLE animal;


DEFINE FIELD characteristics ON animal TYPE array<string>;
UPDATE animal SET characteristics = attributes;
REMOVE FIELD attributes ON TABLE animal;
REMOVE FIELD createdAt ON TABLE animal;


REMOVE FIELD updatedAt ON TABLE animal;


DEFINE INDEX species_speed_idx ON animal FIELDS velocity, characteristics UNIQUE;
DEFINE EVENT event1 ON animal WHEN species = 'Homo Habillis' AND velocity > 545 THEN (SELECT * FROM crop);
REMOVE EVENT event2 ON TABLE animal;
DEFINE FIELD location ON eats TYPE string;
REMOVE FIELD place ON TABLE eats;


DEFINE FIELD updatedAt ON eats TYPE datetime;
DEFINE TABLE new_stuff SCHEMAFULL;
DEFINE FIELD createdAt ON new_stuff TYPE datetime;
DEFINE FIELD firstName ON new_stuff TYPE string;
DEFINE FIELD id ON new_stuff TYPE record<new_stuff>;
DEFINE FIELD updatedAt ON new_stuff TYPE datetime;
DEFINE FIELD newName ON planet TYPE string;
UPDATE planet SET newName = firstName;
REMOVE FIELD firstName ON TABLE planet;
REMOVE TABLE student;
